src/test/deca/context/valid/created/class-method-param.deca
//Description :
// Test d'une déclaration de méthode avec paramètre dans une classe
//
// Resultats :
//


class Premiere {

    void affiche(int i) {
        print("Yo : ", i);
    }
}

{}
