src/test/deca/context/invalid/created/void-parameter.deca
//Description :
// Methode avec paramètre de type void
//
// Resultats :
// Erreur

class A {

    int methode(void x) {
        println("C'est non");
    }
}


{
    
}
